--- a/package.json
+++ b/package.json
@@ -5,39 +5,39 @@
   "main": ".src/app.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
-    "@types/node": "^12.12.36",
+    "@types/node": "^12.12.62",
     "express": "^4.17.1",
     "hacktimer": "^1.1.3",
-    "jquery": ">=3.5.0",
+    "jquery": "^3.5.1",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
-    "mongodb": "^3.5.6",
+    "mongodb": "^3.6.2",
     "popper.js": "^1.16.1",
     "script-ext-html-webpack-plugin": "^2.1.4",
-    "socket.io-client": "^2.3.0",
+    "socket.io-client": "^2.3.1",
     "tsconfig": "^7.0.0",
-    "webrtc-adapter": "^7.5.1",
-    "websocket": "^1.0.31"
+    "webrtc-adapter": "^7.7.0",
+    "websocket": "^1.0.32"
   },
   "devDependencies": {
     "bufferutil": "^4.0.1",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.5.2",
+    "copy-webpack-plugin": "^5.1.2",
+    "css-loader": "^3.6.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "npm": "^6.14.4",
+    "npm": "^6.14.8",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tslint": "^5.20.1",
     "typedoc": "^0.15.8",
     "typedoc-webpack-plugin": "^1.1.4",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.7",
     "utf-8-validate": "^5.0.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "dev": "webpack --config webpack.config.js",
